--- a/src/components/Volunteer/Volunteer.module.css
+++ b/src/components/Volunteer/Volunteer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   gap: 12px;
-  background-color: #ededed;
+  background: linear-gradient(#fff, #f6f6f6);
   padding: 12px 24px;
   border-radius: 8px;
   box-shadow: 3px 6px 4px -5px rgba(0, 0, 0, 0.25);
@@ -12,6 +12,13 @@
   width: 48px;
   height: 48px;
   flex-shrink: 0;
+}
+
+.volunteer_wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  flex-grow: 1;
 }
 
 .volunteer_info {
