--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -8,9 +8,11 @@
 
 .filters_input {
   flex: 1 1 0;
+  min-width: 300px !important;
 }
 
 .filters_row {
   display: flex;
+  flex-wrap: wrap;
   gap: 16px;
 }
