--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,14 +1,3 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 html,
 body {
@@ -17,8 +6,6 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -26,17 +13,43 @@ body {
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
-
 a {
   color: inherit;
   text-decoration: none;
 }
+.addVol {
+  width: 30%;
+  margin: 5% 34%;
+  padding: 3% 2%;
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+}
+.addVolForm {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input {
+  padding: 10vh;
+  border: 1px solid #c4c4c4;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: border-color 0.3s;
+  margin: 6px 0 !important;
+}
+h3{
+padding: 1%;
+}
+label{
+  margin: 1%;
+}
+.button{
+  margin-top: 16px !important;
+  padding: 2%;
+}
+input:focus {
+  border-color: #0078FF;
+  outline: none;
 }
