--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,9 +18,10 @@ a {
   text-decoration: none;
 }
 .addVol {
-  width: 30%;
-  margin: 5% 34%;
-  padding: 3% 2%;
+  width: 100%;
+  margin: 24px auto;
+  padding: 24px;
+  max-width: 500px;
 
 }
 .addVolForm {
