--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,3 +44,44 @@ a {
   margin-top: 16px !important;
   padding: 2%;
 }
+.p {
+  margin: 3%;
+  z-index: 10;
+}
+.center {
+  text-align: center;
+}
+.intro {
+  margin: 3%;
+  padding: 3%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-size: cover;
+  min-height: 40vh;
+  position: relative;
+  font-size: large;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  padding: 20px;
+}
+.text {
+  color: white;
+  background-color: rgba(116, 114, 114, 0.4);
+  padding: 20px;
+  border-radius: 8px;
+  position: relative;
+  z-index: 1;
+}
+
+
+#intro {
+  background-image: url("../assets//img/bonus-placeholder.jpg");
+}
+#vol {
+  background-image: url("../assets//img/background.jpg");
+}
+#parthners {
+  background-image: url("../assets//img/organization-placholder.jpg");
+}
