--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -75,13 +75,32 @@ a {
   z-index: 1;
 }
 
-
 #intro {
-  background-image: url("../assets//img/bonus-placeholder.jpg");
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.3) 59%,
+      rgba(0, 0, 0, 0.65) 100%
+    ),
+    url("../assets//img/bonus-placeholder.jpg");
 }
+
 #vol {
-  background-image: url("../assets//img/background.jpg");
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.3) 59%,
+      rgba(0, 0, 0, 0.65) 100%
+    ),
+    url("../assets//img/background.jpg");
 }
+
 #parthners {
-  background-image: url("../assets//img/organization-placholder.jpg");
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.3) 59%,
+      rgba(0, 0, 0, 0.65) 100%
+    ),
+    url("../assets//img/organization-placholder.jpg");
 }
